added caddy as reverse proxy

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-DEFAULT_EMAIL=some-email@domain.zone
-HOST_URL=example.com
-API_PATH=/api
-API_DEST=/
-UI_PATH=/
+EMAIL=some-email@domain.zone
+HOST_NAME=example.com
+
 ENVIRONMENT=example
 LOG_LEVEL=INFO
 DEFAULT_ADMIN_PASSWORD=supersecret
