--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
 
     - name: Show server logs
       run: docker logs mis-server
+
+    - name: Show caddy logs
+      run: docker logs caddy
     
     - name: Stop with docker compose
       run: docker compose down
